fix: Correct CSS selector for full-width alignment in editor
Use .alignfull class instead of [data-align="full"] attribute selector to match actual HTML structure in editor.

Changes:
- Changed from attribute selector [data-align="full"] to class selector .alignfull
- Removed .is-root-container requirement (not present on blocks)
- Removed child combinator (>) to target blocks directly
- Now targets: .block-editor-block-list__layout.has-global-padding.alignfull[data-type="..."]

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -65,10 +65,11 @@
  * Fix alignfull behavior for our container blocks in the editor
  * Ensures full-width blocks extend edge-to-edge correctly
  * CRITICAL: High specificity required to override WordPress core styles
+ * Target the blocks themselves using .alignfull class
  */
-.block-editor-block-list__layout.is-root-container.has-global-padding > [data-type="designsetgo/grid"][data-align="full"],
-.block-editor-block-list__layout.is-root-container.has-global-padding > [data-type="designsetgo/flex"][data-align="full"],
-.block-editor-block-list__layout.is-root-container.has-global-padding > [data-type="designsetgo/stack"][data-align="full"] {
+.block-editor-block-list__layout.has-global-padding.alignfull[data-type="designsetgo/grid"],
+.block-editor-block-list__layout.has-global-padding.alignfull[data-type="designsetgo/flex"],
+.block-editor-block-list__layout.has-global-padding.alignfull[data-type="designsetgo/stack"] {
 	margin-right: calc(var(--wp--style--root--padding-right) * -1) !important;
 	margin-left: calc(var(--wp--style--root--padding-left) * -1) !important;
 }
